k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: artifact-service
  namespace: artifact-service

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: artifact-service

  template:
    metadata:
      labels:
        app: artifact-service

    spec:
      containers:
        - name: artifact-service
          image: artifact-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
