k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: artifact-service
  namespace: artifact-service

spec:
  selector:
    app: artifact-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
