k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: artifact-service
  namespace: artifact-service

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: artifact.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifact-service
                port:
                  number: 80
